updates the readme

--- a/README.html
+++ b/README.html
@@ -444,7 +444,7 @@ pre[class*="language-"] {
 <h1 id="toc_0">CS 351 DLP_phase01</h1>
 
 <p>by<br>
-By David Ringo and Winston Riley.</p>
+David Ringo and Winston Riley.</p>
 
 <h2 id="toc_1">Building</h2>
 
