makes crucial change in readme

--- a/README.html
+++ b/README.html
@@ -448,7 +448,7 @@ David Ringo and Winston Riley.</p>
 
 <h2 id="toc_1">Building</h2>
 
-<p>find the following files and&hellip;</p>
+<p>find the following files <code>make.sh</code> and <code>run.sh</code> and&hellip;</p>
 
 <pre><code class="language-bash">./make.sh &amp;&amp; ./run.sh</code></pre>
 
