regens the HTML

--- a/README.html
+++ b/README.html
@@ -467,17 +467,17 @@ David Ringo and Winston Riley.</p>
 
 <ul>
 <li>Meta (on mac command) click allows multiple region selection (as does click and drag).</li>
-<li>key 1 displays the default map look</li>
-<li>key 2 displays the &lsquo;happiness&rsquo; index of regions</li>
-<li>key 3 displays the planting zone of each region.</li>
+<li>num-key 1 displays the default map look</li>
+<li>num-key 2 displays the &lsquo;happiness&rsquo; index of regions</li>
+<li>num-key 3 displays the planting zone of each region.</li>
 </ul>
 
 <h3 id="toc_5">Time</h3>
 
 <ul>
-<li>key 8 sets the game time to normal </li>
-<li>key 9 speed the game to medium</li>
-<li>key 0 set the game to super fast speed.</li>
+<li>num-key 8 sets the game time to normal</li>
+<li>num-key 9 speed the game to medium</li>
+<li>num-key 0 set the game to super fast speed.</li>
 <li>space bar pauses the game.</li>
 </ul>
 
