--- a/README.html
+++ b/README.html
@@ -302,149 +302,12 @@ sup {
 	}
 }
 </style>
-<style type="text/css">
-/**
- * prism.js default theme for JavaScript, CSS and HTML
- * Based on dabblet (http://dabblet.com)
- * @author Lea Verou
- */
-
-code[class*="language-"],
-pre[class*="language-"] {
-	color: black;
-	text-shadow: 0 1px white;
-	font-family: Consolas, Monaco, 'Andale Mono', monospace;
-	direction: ltr;
-	text-align: left;
-	white-space: pre;
-	word-spacing: normal;
-	word-break: normal;
-	line-height: 1.5;
-
-	-moz-tab-size: 4;
-	-o-tab-size: 4;
-	tab-size: 4;
-
-	-webkit-hyphens: none;
-	-moz-hyphens: none;
-	-ms-hyphens: none;
-	hyphens: none;
-}
-
-pre[class*="language-"]::-moz-selection, pre[class*="language-"] ::-moz-selection,
-code[class*="language-"]::-moz-selection, code[class*="language-"] ::-moz-selection {
-	text-shadow: none;
-	background: #b3d4fc;
-}
-
-pre[class*="language-"]::selection, pre[class*="language-"] ::selection,
-code[class*="language-"]::selection, code[class*="language-"] ::selection {
-	text-shadow: none;
-	background: #b3d4fc;
-}
-
-@media print {
-	code[class*="language-"],
-	pre[class*="language-"] {
-		text-shadow: none;
-	}
-}
-
-/* Code blocks */
-pre[class*="language-"] {
-	padding: 1em;
-	margin: .5em 0;
-	overflow: auto;
-}
-
-:not(pre) > code[class*="language-"],
-pre[class*="language-"] {
-	background: #f5f2f0;
-}
-
-/* Inline code */
-:not(pre) > code[class*="language-"] {
-	padding: .1em;
-	border-radius: .3em;
-}
-
-.token.comment,
-.token.prolog,
-.token.doctype,
-.token.cdata {
-	color: slategray;
-}
-
-.token.punctuation {
-	color: #999;
-}
-
-.namespace {
-	opacity: .7;
-}
-
-.token.property,
-.token.tag,
-.token.boolean,
-.token.number,
-.token.constant,
-.token.symbol,
-.token.deleted {
-	color: #905;
-}
-
-.token.selector,
-.token.attr-name,
-.token.string,
-.token.char,
-.token.builtin,
-.token.inserted {
-	color: #690;
-}
-
-.token.operator,
-.token.entity,
-.token.url,
-.language-css .token.string,
-.style .token.string {
-	color: #a67f59;
-	background: hsla(0, 0%, 100%, .5);
-}
-
-.token.atrule,
-.token.attr-value,
-.token.keyword {
-	color: #07a;
-}
-
-.token.function {
-	color: #DD4A68;
-}
-
-.token.regex,
-.token.important,
-.token.variable {
-	color: #e90;
-}
-
-.token.important,
-.token.bold {
-	font-weight: bold;
-}
-.token.italic {
-	font-style: italic;
-}
-
-.token.entity {
-	cursor: help;
-}
-</style>
 </head>
 <body>
-<h1 id="toc_0">CS 351 DLP_phase01</h1>
+<h1 id="toc_0">CS 351 World Food Game - second phase</h1>
 
-<p>by<br>
-David Ringo and Winston Riley.</p>
+<p>by <br>
+Jessica Jones, Winston Riley, and David Ringo</p>
 
 <h2 id="toc_1">Building</h2>
 
@@ -463,38 +326,85 @@ David Ringo and Winston Riley.</p>
 <li>mouse scroll wheel also zooms in and out</li>
 </ul>
 
-<h3 id="toc_4">Inspecting</h3>
+<h3 id="toc_4">Time</h3>
+
+<p>The game time mechanism can be controlled via buttons on the control panel <br>
+* <q>next</q> will step the game forward one year<br>
+* <q>run</q> will cause the game to start stepping at roughly one year every thirty seconds<br>
+* <q>pause</q> will pause the game if it is currently running</p>
+
+<h3 id="toc_5">Inspecting</h3>
 
 <ul>
-<li>Meta (on mac command) click allows multiple region selection (as does click and drag).</li>
-<li>num-key 1 displays the default map look</li>
-<li>num-key 2 displays the &lsquo;happiness&rsquo; index of regions</li>
-<li>num-key 3 displays the planting zone of each region.</li>
-</ul>
-
-<h3 id="toc_5">Time</h3>
+<li>clicking on a country will select that country for display and modification</li>
+<li>holding shift while clicking will add countries to any that are currently selected </li>
+<li>holding shift and dragging with the mouse will allow for rectangular selection of countries
 
 <ul>
-<li>num-key 8 sets the game time to normal</li>
-<li>num-key 9 speed the game to medium</li>
-<li>num-key 0 set the game to super fast speed.</li>
-<li>space bar pauses the game.</li>
+<li>known bug: Radio button selection of overlays causes rectangluar selection to break<br>
+We are comfortable blaming the Swing framework for this </li>
+</ul></li>
 </ul>
 
-<h4 id="toc_6">credits</h4>
+<h3 id="toc_6">Info Panel</h3>
 
-<p>text editor for XML editing was build using <a href="https://github.com/bobbylight">RSyntaxTextArea</a>.<br>
-region data from <a href="http://www.naturalearthdata.com">Natural Earth</a>.</p>
+<p>use the tabs of the info panel to display information about and control the currently selected countries </p>
 
-<script type="text/javascript">
-self="undefined"!=typeof window?window:"undefined"!=typeof WorkerGlobalScope&&self instanceof WorkerGlobalScope?self:{};var Prism=function(){var e=/\blang(?:uage)?-(?!\*)(\w+)\b/i,t=self.Prism={util:{encode:function(e){return e instanceof n?new n(e.type,t.util.encode(e.content),e.alias):"Array"===t.util.type(e)?e.map(t.util.encode):e.replace(/&/g,"&amp;").replace(/</g,"&lt;").replace(/\u00a0/g," ")},type:function(e){return Object.prototype.toString.call(e).match(/\[object (\w+)\]/)[1]},clone:function(e){var n=t.util.type(e);switch(n){case"Object":var a={};for(var r in e)e.hasOwnProperty(r)&&(a[r]=t.util.clone(e[r]));return a;case"Array":return e.map(function(e){return t.util.clone(e)})}return e}},languages:{extend:function(e,n){var a=t.util.clone(t.languages[e]);for(var r in n)a[r]=n[r];return a},insertBefore:function(e,n,a,r){r=r||t.languages;var i=r[e];if(2==arguments.length){a=arguments[1];for(var l in a)a.hasOwnProperty(l)&&(i[l]=a[l]);return i}var o={};for(var s in i)if(i.hasOwnProperty(s)){if(s==n)for(var l in a)a.hasOwnProperty(l)&&(o[l]=a[l]);o[s]=i[s]}return t.languages.DFS(t.languages,function(t,n){n===r[e]&&t!=e&&(this[t]=o)}),r[e]=o},DFS:function(e,n,a){for(var r in e)e.hasOwnProperty(r)&&(n.call(e,r,e[r],a||r),"Object"===t.util.type(e[r])?t.languages.DFS(e[r],n):"Array"===t.util.type(e[r])&&t.languages.DFS(e[r],n,r))}},highlightAll:function(e,n){for(var a,r=document.querySelectorAll('code[class*="language-"], [class*="language-"] code, code[class*="lang-"], [class*="lang-"] code'),i=0;a=r[i++];)t.highlightElement(a,e===!0,n)},highlightElement:function(a,r,i){for(var l,o,s=a;s&&!e.test(s.className);)s=s.parentNode;if(s&&(l=(s.className.match(e)||[,""])[1],o=t.languages[l]),o){a.className=a.className.replace(e,"").replace(/\s+/g," ")+" language-"+l,s=a.parentNode,/pre/i.test(s.nodeName)&&(s.className=s.className.replace(e,"").replace(/\s+/g," ")+" language-"+l);var g=a.textContent;if(g){g=g.replace(/^(?:\r?\n|\r)/,"");var u={element:a,language:l,grammar:o,code:g};if(t.hooks.run("before-highlight",u),r&&self.Worker){var c=new Worker(t.filename);c.onmessage=function(e){u.highlightedCode=n.stringify(JSON.parse(e.data),l),t.hooks.run("before-insert",u),u.element.innerHTML=u.highlightedCode,i&&i.call(u.element),t.hooks.run("after-highlight",u)},c.postMessage(JSON.stringify({language:u.language,code:u.code}))}else u.highlightedCode=t.highlight(u.code,u.grammar,u.language),t.hooks.run("before-insert",u),u.element.innerHTML=u.highlightedCode,i&&i.call(a),t.hooks.run("after-highlight",u)}}},highlight:function(e,a,r){var i=t.tokenize(e,a);return n.stringify(t.util.encode(i),r)},tokenize:function(e,n){var a=t.Token,r=[e],i=n.rest;if(i){for(var l in i)n[l]=i[l];delete n.rest}e:for(var l in n)if(n.hasOwnProperty(l)&&n[l]){var o=n[l];o="Array"===t.util.type(o)?o:[o];for(var s=0;s<o.length;++s){var g=o[s],u=g.inside,c=!!g.lookbehind,f=0,h=g.alias;g=g.pattern||g;for(var p=0;p<r.length;p++){var d=r[p];if(r.length>e.length)break e;if(!(d instanceof a)){g.lastIndex=0;var m=g.exec(d);if(m){c&&(f=m[1].length);var y=m.index-1+f,m=m[0].slice(f),v=m.length,k=y+v,b=d.slice(0,y+1),w=d.slice(k+1),O=[p,1];b&&O.push(b);var N=new a(l,u?t.tokenize(m,u):m,h);O.push(N),w&&O.push(w),Array.prototype.splice.apply(r,O)}}}}}return r},hooks:{all:{},add:function(e,n){var a=t.hooks.all;a[e]=a[e]||[],a[e].push(n)},run:function(e,n){var a=t.hooks.all[e];if(a&&a.length)for(var r,i=0;r=a[i++];)r(n)}}},n=t.Token=function(e,t,n){this.type=e,this.content=t,this.alias=n};if(n.stringify=function(e,a,r){if("string"==typeof e)return e;if("[object Array]"==Object.prototype.toString.call(e))return e.map(function(t){return n.stringify(t,a,e)}).join("");var i={type:e.type,content:n.stringify(e.content,a,r),tag:"span",classes:["token",e.type],attributes:{},language:a,parent:r};if("comment"==i.type&&(i.attributes.spellcheck="true"),e.alias){var l="Array"===t.util.type(e.alias)?e.alias:[e.alias];Array.prototype.push.apply(i.classes,l)}t.hooks.run("wrap",i);var o="";for(var s in i.attributes)o+=s+'="'+(i.attributes[s]||"")+'"';return"<"+i.tag+' class="'+i.classes.join(" ")+'" '+o+">"+i.content+"</"+i.tag+">"},!self.document)return self.addEventListener?(self.addEventListener("message",function(e){var n=JSON.parse(e.data),a=n.language,r=n.code;self.postMessage(JSON.stringify(t.util.encode(t.tokenize(r,t.languages[a])))),self.close()},!1),self.Prism):self.Prism;var a=document.getElementsByTagName("script");return a=a[a.length-1],a&&(t.filename=a.src,document.addEventListener&&!a.hasAttribute("data-manual")&&document.addEventListener("DOMContentLoaded",t.highlightAll)),self.Prism}();"undefined"!=typeof module&&module.exports&&(module.exports=Prism);
-</script>
-<script type="text/javascript">
-Prism.languages.clike={comment:[{pattern:/(^|[^\\])\/\*[\w\W]*?\*\//g,lookbehind:!0},{pattern:/(^|[^\\:])\/\/.*?(\r?\n|$)/g,lookbehind:!0}],string:/("|')(\\\n|\\?.)*?\1/g,"class-name":{pattern:/((?:(?:class|interface|extends|implements|trait|instanceof|new)\s+)|(?:catch\s+\())[a-z0-9_\.\\]+/gi,lookbehind:!0,inside:{punctuation:/(\.|\\)/}},keyword:/\b(if|else|while|do|for|return|in|instanceof|function|new|try|throw|catch|finally|null|break|continue)\b/g,"boolean":/\b(true|false)\b/g,"function":{pattern:/[a-z0-9_]+\(/gi,inside:{punctuation:/\(/}},number:/\b-?(0x[\dA-Fa-f]+|\d*\.?\d+([Ee]-?\d+)?)\b/g,operator:/[-+]{1,2}|!|<=?|>=?|={1,3}|&{1,2}|\|?\||\?|\*|\/|~|\^|%/g,ignore:/&(lt|gt|amp);/gi,punctuation:/[{}[\];(),.:]/g};
-</script>
-<script type="text/javascript">
-Prism.languages.bash=Prism.languages.extend("clike",{comment:{pattern:/(^|[^"{\\])(#.*?(\r?\n|$))/g,lookbehind:!0},string:{pattern:/("|')(\\?[\s\S])*?\1/g,inside:{property:/\$([a-zA-Z0-9_#\?\-\*!@]+|\{[^\}]+\})/g}},keyword:/\b(if|then|else|elif|fi|for|break|continue|while|in|case|function|select|do|done|until|echo|exit|return|set|declare)\b/g}),Prism.languages.insertBefore("bash","keyword",{property:/\$([a-zA-Z0-9_#\?\-\*!@]+|\{[^}]+\})/g}),Prism.languages.insertBefore("bash","comment",{important:/(^#!\s*\/bin\/bash)|(^#!\s*\/bin\/sh)/g});
-</script>
+<ul>
+<li><q>demographic</q> shows country demographic data</li>
+<li><q>land</q> shows a summary of land usage and provides buttons for modification</li>
+<li><q>crops</q> shows a more detailed, single-crop oriented view, also with modification controls</li>
+<li><q>overlays</q> provides an interface for showing different visual data on the map</li>
+</ul>
+
+<h2 id="toc_7"></h2>
+
+<h5 id="toc_8">Credits</h5>
+
+<p>text editor for XML editing was build using <a href="https://github.com/bobbylight">RSyntaxTextArea</a>. <br>
+csv parsing is done with the help of the <a href="https://commons.apache.org/proper/commons-csv/">Apache Commons CSV</a> library. <br>
+country border data from <a href="http://www.naturalearthdata.com">Natural Earth</a>. <br>
+current and future raw climate data was found at <a href="http://worldclim.org/">WorldClim</a>. </p>
+
+<h5 id="toc_9">initial values for country data underlying our models were found from multiple resources:</h5>
+
+<ul>
+<li><p>population, birth rate, mortality, migration </p>
+
+<ul>
+<li><a href="http://www.prb.org/DataFinder/">Population Reference Bureau</a></li>
+</ul></li>
+<li><p>median age</p>
+
+<ul>
+<li><a href="http://data.un.org/">UN data</a> and <a href="https://www.cia.gov/library/publications/the-world-factbook/">CIA World Factbook</a></li>
+</ul></li>
+<li><p>undernourishment, land dedication, production, imports, and exports</p>
+
+<ul>
+<li><a href="http://faostat3.fao.org/home/">FAOSTAT</a></li>
+</ul></li>
+<li><p>GMO usage</p>
+
+<ul>
+<li><a href="http://www.isaaa.org/resources/publications/briefs/49/executivesummary/default.asp">ISAAA Brief 49-2014</a></li>
+</ul></li>
+</ul>
+
+<h5 id="toc_10">crop preferred ranges were pulled from the following resources:</h5>
+
+<ul>
+<li><a href="http://www.amazon.com/Fundamentals-Rice-Science-Shouichi-Yoshida/dp/B000NZ7ZS2">Fundamentals of Rice Crop Science</a> by Shouichi Yoshida</li>
+<li>Progress in Upland Rice Research: Proceedings of the 1985 Jakarta Conference. <q>An Overview of Upland Rice in the World</q> by Tran Van Dat.</li>
+<li><a href="http://www.fao.org/docrep/006/y4011e/y4011e06.htm"><q>Wheat growth and physiology</q></a> by E. Acevedo, P. Silva, H. Silva.</li>
+<li><a href="http://www.fao.org/nr/water/cropinfo_wheat.html"><q>Crop Water Information: Wheat</q></a> FAO Land &amp; Water Division</li>
+<li><a href="http://cmsdata.iucn.org/downloads/pk_water_req.pdf"><q>Water requirements of major crops for different agro-climatic zones of Balochistan</q></a> by Muhammad Ashraf and Abdul Majeed</li>
+<li><a href="https://www.extension.purdue.edu/extmedia/nch/nch-40.html"><q>Growing Season Characteristics and Requirements in the Corn Belt</q></a> by Ralph E. Neild and James E. Newman.</li>
+<li><a href="https://www.lsuagcenter.com/NR/rdonlyres/84746337-8BFE-4903-BEB8-420D0D2B7271/82639/InTechSoybean_yield_formation_what_controls_it_and.pdf"><q>Soybean Yield Formation: What Controls It and How It Can Be Improved</q></a>
+by James E. Board and Charanjit S. Kahlon.</li>
+<li><a href="http://www.fao.org/nr/water/cropinfo_soybean.html"><q>Crop Water Information: Soybean</q></a> FAO Land &amp; Water Division </li>
+</ul>
+
 <script type="text/x-mathjax-config">
 if (typeof MathJaxListener !== 'undefined') {
   MathJax.Hub.Register.StartupHook('End', function () {
